--- a/easybuy/src/components/menu-item/menu-item.scss
+++ b/easybuy/src/components/menu-item/menu-item.scss
@@ -11,7 +11,7 @@
     background-size: cover;
   
     &.large {
-        height: 980px;
+        height: 580px;
     }
 
     &:first-child {
@@ -30,6 +30,8 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      background-color: white;
+      opacity: 0.7;
   
       .title {
         font-weight: bold;
