--- a/easybuy/src/components/custom-button/custom-button.scss
+++ b/easybuy/src/components/custom-button/custom-button.scss
@@ -19,5 +19,13 @@
       color: black;
       border: 1px solid black;
     }
+    &.google-sign-in{
+        background-color: #4285f3;
+        color: white;
+    }
+    &:hover{
+        background-color: #357ae7;
+        border: none;
+    }
   }
   
