--- a/easybuy/src/components/custom-button/custom-button.scss
+++ b/easybuy/src/components/custom-button/custom-button.scss
@@ -22,10 +22,10 @@
     &.google-sign-in{
         background-color: #4285f3;
         color: white;
-    }
+    
     &:hover{
         background-color: #357ae7;
         border: none;
-    }
+    }}
   }
   
